fix: sudden flash when default is dark mode
There was a issue when the set preference is dark mode and site is refreshed there was a flash of light mode and then dark mode is activated.

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-
-* {
-    transition: 0.5s;
+html.color-theme-in-transition,
+html.color-theme-in-transition *,
+html.color-theme-in-transition *:before,
+html.color-theme-in-transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
 }
 
 body {
@@ -18,6 +21,7 @@ body {
     background-color: white;
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
+
 }
 
 body.dark {
